--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ authors = ["Ashish Lal <ashishlal2003@gmail.com>"]
 python = "^3.11"
 
 [tool.poetry.dev-dependencies]
-pytest = "^8.4.1"  # or any version compatible with your setup
+pytest = "^8.4.1"
+google-genai = "^1.27.0"
 
 [build-system]
 requires = ["poetry-core"]
