--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,4 @@
 MODEL_API_KEY=<MODEL_API_KEY>
 TAVILY_API_KEY=<TAVILY_API_KEY>
+GITHUB_PAT=<GITHUB_PERSONAL_ACCESS_TOKEN>
+SLACK_BOT_TOKEN=<SLACK_BOT_TOKEN>
