--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "tvara"
 version = "0.1.1"
 description = "A Python package for Tvara, a tool for automating workflows."
-authors = ["Ashish Lal <ashishlal2003@gmail.com>"]
+authors = ["Team Tvara <team@tvarahq.com>"]
 license = "MIT"
 readme = "README.md"
 keywords = ["agents", "AI", "workflow", "tvara"]
@@ -13,6 +13,7 @@ repository = "https://github.com/tvarahq/tvara"
 python = ">=3.9"
 google-genai = "^1.27.0"
 tavily-python = "^0.7.10"
+openai = "^1.99.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^8.4.1"
