--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,9 @@ repository = "https://github.com/tvarahq/tvara"
 [tool.poetry.dependencies]
 python = ">=3.9"
 google-genai = "^1.27.0"
-tavily-python = "^0.7.10"
 openai = "^1.99.1"
+anthropic = "^0.61.0"
+tavily-python = "^0.7.10"
 
 [tool.poetry.dev-dependencies]
 pytest = "^8.4.1"
