--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,11 +13,13 @@ repository = "https://github.com/tvarahq/tvara"
 tvara = "tvara.cli.main:cli"
 
 [tool.poetry.dependencies]
-python = ">=3.9"
+python = ">=3.9,<4"
 google-genai = "^1.27.0"
-openai = "^1.99.1"
+openai = "1.99.9"
 anthropic = "^0.61.0"
 tavily-python = "^0.7.10"
+composio = "0.8.0"
+pydantic = "2.11.7"
 
 [tool.poetry.dev-dependencies]
 pytest = "^8.4.1"
